<resources>
    <string name="app_name">Team01_Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_player_to_campaign">Add Player to Campaign</string>
    <string name="username_or_user_id">Username or User ID</string>
    <string name="add_player">Add Player</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_friends">My Friends</string>
    <string name="loading_friends">Loading friends…</string>
    <string name="friends_count">You have %d friends</string>
    <string name="campaigns_loaded">Loaded %d campaigns</string>
    <string name="my_campaigns">My Campaigns</string>
    <string name="loading_campaigns">Loading campaigns…</string>
    <string name="create_new_campaign">Create New Campaign</string>
    <string name="campaign_name">Campaign Name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="create_campaign">Create Campaign</string>
    <string name="select_race">select_race</string>
    <string name="select_class">select_class</string>
</resources>